--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -46,7 +46,7 @@
           <div class="card-body d-flex flex-column p-4">
             <div class="d-flex justify-content-between align-items-start mb-2">
               <h5 class="card-title fw-bold mb-0 text-truncate" style="max-width: 85%;"><%= bookmark.movie.title %></h5>
-              <div class="d-flex align-items-center">
+              <div class="d-flex justify-content-between align-items-center">
                  <span class="me-1"><%= bookmark.movie.rating %></span> <i class="fas fa-star text-warning"></i>
               </div>
             </div>
